:lipstick: Fixed navbar centering and txt align

--- a/src/UI/BoardNav/BoardNav.module.scss
+++ b/src/UI/BoardNav/BoardNav.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   height: 150px;
   justify-content: space-between;
+  margin: auto;
+  width: 90%;
   img {
     height: 93%;
     width: 280px;
